--- a/app/src/main/res/layout/activity_pool_details.xml
+++ b/app/src/main/res/layout/activity_pool_details.xml
@@ -12,8 +12,18 @@
         android:id="@+id/text_pool_created_by"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:textAppearanceMedium"
+        android:textColor="?android:textColorPrimary"
+        android:textSize="15sp"
         tools:text="Pool created on the 27th of January by John Smith"/>
+
+    <TextView
+        android:id="@+id/text_contributions_header"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="16dp"
+        android:textAppearance="?android:textAppearanceLarge"
+        android:text="@string/header_contributions"/>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/list_contributions"
