--- a/app/src/main/res/layout/activity_pool_details.xml
+++ b/app/src/main/res/layout/activity_pool_details.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:padding="16dp"
     tools:context="com.cpc.minipoolsandroid.activities.PoolDetailsActivity">
 
@@ -12,6 +12,8 @@
         android:id="@+id/text_pool_created_by"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
         android:textColor="?android:textColorPrimary"
         android:textSize="15sp"
         tools:text="Pool created on the 27th of January by John Smith"/>
@@ -20,6 +22,8 @@
         android:id="@+id/text_contributions_header"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_below="@id/text_pool_created_by"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="16dp"
         android:textAppearance="?android:textAppearanceLarge"
@@ -28,6 +32,18 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/list_contributions"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:layout_alignParentStart="true"
+        android:layout_below="@id/text_contributions_header"/>
 
-</LinearLayout>
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_margin="@dimen/fab_margin"
+        app:srcCompat="@drawable/ic_add_white"/>
+
+
+</RelativeLayout>
