--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,9 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="DialogStyle" parent="Base.ThemeOverlay.AppCompat.Dialog.Alert">
+        <!--<item name="android:windowMinWidthMajor">90%</item>-->
+        <!--<item name="android:windowMinWidthMinor">90%</item>-->
+    </style>
+
 </resources>
